# real-cloned-singer-id

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
evaluation/: closed_results.py  dataset.py  fma_results.py  model.py  mtg_results.py  parameters.py  pickle_embeddings.py  train.py
foundation/: audio.py  constants.py  model.py
training/: dataset.py  loss.py  parameters.py  train.py
